--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
 								<span class="filter-check_label-text">Акция</span>
                             </label>
 
+							<label class="filter-check_label">
+								<input type="checkbox" class="filter-check_checkbox" id="discount-precent">
+								<span class="filter-check_checkmark"></span>
+								<span class="filter-check_label-text">в наличии</span>
+                            </label>
+
+							<label class="filter-check_label">
+								<input type="checkbox" class="filter-check_checkbox" id="discount-top">
+								<span class="filter-check_checkmark"></span>
+								<span class="filter-check_label-text">Топ</span>
+                            </label>
+
 						</div>
 					</div>
 				</div>
